--- a/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
+++ b/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
@@ -49,10 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "spells = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,10 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,10 +85,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_victory =[]\n",
+    "saruman_victory =[]\n",
+    "spells=0\n",
+    "i=0\n",
+    "\n",
+    "while spells < len(gandalf):\n",
+    "   \n",
+    "    if gandalf[spells] > saruman[spells]:\n",
+    "        gandalf_wins += 1\n",
+    "        gandalf_victory.append(gandalf_wins)\n",
+    "    elif gandalf[spells] < saruman[spells]:\n",
+    "        saruman_wins += 1\n",
+    "        saruman_victory.append(saruman_wins)\n",
+    "    spells+=1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,10 +115,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf won the battle\n"
+     ]
+    }
+   ],
+   "source": [
+    "if len(saruman_victory)< len( gandalf_victory): print('Gandalf won the battle')\n",
+    "elif len(saruman_victory)> len( gandalf_victory): print('Saruman won the battle')\n",
+    "else: print('It is a Tie')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +162,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "POWER = {\n",
+    "    'Fireball': 50, \n",
+    "    'Lightning bolt': 40, \n",
+    "    'Magic arrow': 10, \n",
+    "    'Black Tentacles': 25, \n",
+    "    'Contagion': 45\n",
+    "}\n",
+    "\n",
+    "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', \n",
+    "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Fireball', 'Fireball']\n",
+    "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
+    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
+    "spells = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,10 +190,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,10 +207,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_power = []\n",
+    "saruman_power = []"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,10 +225,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n",
+      "Gandalf is the winner, he wins three spell clashes in a row\n"
+     ]
+    }
+   ],
+   "source": [
+    "while spells < len(gandalf):\n",
+    "    gandalf_power.append(POWER[gandalf[spells]])\n",
+    "    saruman_power.append(POWER[saruman[spells]])\n",
+    "\n",
+    "    spells += 1\n",
+    "\n",
+    "\n",
+    "gandalf_power_value = 0\n",
+    "saruman_power_value = 0\n",
+    "gandalf_row = 0\n",
+    "saruman_row = 0\n",
+    "\n",
+    "for (gandalf_power_value,saruman_power_value) in zip(gandalf_power,saruman_power):\n",
+    "\n",
+    "    if gandalf_power_value > saruman_power_value :\n",
+    "        gandalf_row += 1\n",
+    "        saruman_row = 0\n",
+    "        if gandalf_row  == 3 :\n",
+    "            print('Gandalf is the winner, he wins three spell clashes in a row')\n",
+    "            break\n",
+    "    if gandalf_power_value < saruman_power_value :\n",
+    "        gandalf_row = 0\n",
+    "        saruman_row += 1\n",
+    "        if saruman_row  == 3 :\n",
+    "            print('Saruman is the winner, he wins three spell clashes in a row')\n",
+    "            break\n",
+    "    else:\n",
+    "        gandalf_row += 1\n",
+    "        saruman_row += 1\n",
+    "        if (gandalf_row and saruman_row) == 3 :\n",
+    "         print('Gandalf and Saruman battle is a Tie')  \n",
+    "         break"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,16 +281,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the average spell power of Gandalf is 39.0\n",
+      "\n",
+      "The average spell power of Saruman is 30.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_gandalf = sum(gandalf_power)/len(gandalf_power)\n",
+    "avg_saruman = sum(saruman_power)/len(saruman_power)\n",
+    "\n",
+    "print('the average spell power of Gandalf is',avg_gandalf)\n",
+    "print('\\nThe average spell power of Saruman is',avg_saruman)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 6. Find the standard deviation of the spell power of Gandalf and Saruman. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The standard deviation of the spell power of Gandalf is 15.132745950421556\n",
+      "\n",
+      "The standard deviation of the spell power of Saruman is 15.56438241627338\n"
+     ]
+    }
+   ],
+   "source": [
+    "#std = (sum((power_avalue -avg)**2)*(1/len(power)))**(1/2)\n",
+    "g = []\n",
+    "for gandalf_power_value in gandalf_power:\n",
+    "    g.append((gandalf_power_value - avg_gandalf)**2) # g = list with (power_avalue -avg)**2 for gandalf\n",
+    "std_gandalf = (sum(g)*(1/len(gandalf_power)))**(1/2)\n",
+    "print('The standard deviation of the spell power of Gandalf is',std_gandalf)\n",
+    "\n",
+    "s = []\n",
+    "for saruman_power_value in saruman_power:\n",
+    "    s.append((saruman_power_value - avg_saruman)**2) # s = list with (power_avalue -avg)**2 fo saruman\n",
+    "std_saruman = (sum(s)*(1/len(saruman_power)))**(1/2)\n",
+    "print('\\nThe standard deviation of the spell power of Saruman is',std_saruman)"
    ]
   },
   {
@@ -221,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
