--- a/1.-Python/3.-Bus/bus.ipynb
+++ b/1.-Python/3.-Bus/bus.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,10 +52,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of stops is 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The number of stops is',len(stops))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +77,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = stops[0][0]\n",
+    "b = stops[0][0]+stops[1][0]-stops[1][1]\n",
+    "c = ( stops[0][0]+stops[1][0]-stops[1][1]) + stops[2][0]-stops[2][1]\n",
+    "d = ((stops[0][0]+stops[1][0]-stops[1][1]) + stops[2][0]-stops[2][1]) + stops[3][0]-stops[3][1]\n",
+    "e = (((stops[0][0]+stops[1][0]-stops[1][1]) + stops[2][0]-stops[2][1]) + stops[3][0]-stops[3][1]) + stops[4][0]-stops[4][1]\n",
+    "f = ((((stops[0][0]+stops[1][0]-stops[1][1]) + stops[2][0]-stops[2][1]) + stops[3][0]-stops[3][1]) + stops[4][0]-stops[4][1]) + stops[5][0]-stops[5][1]\n",
+    "g = (((((stops[0][0]+stops[1][0]-stops[1][1]) + stops[2][0]-stops[2][1]) + stops[3][0]-stops[3][1]) + stops[4][0]-stops[4][1]) + stops[5][0]-stops[5][1]) + stops[6][0]-stops[6][1]\n",
+    "h = ((((((stops[0][0]+stops[1][0]-stops[1][1]) + stops[2][0]-stops[2][1]) + stops[3][0]-stops[3][1]) + stops[4][0]-stops[4][1]) + stops[5][0]-stops[5][1]) + stops[6][0]-stops[6][1]) + stops[7][0]-stops[7][1]\n",
+    "i = (((((((stops[0][0]+stops[1][0]-stops[1][1]) + stops[2][0]-stops[2][1]) + stops[3][0]-stops[3][1]) + stops[4][0]-stops[4][1]) + stops[5][0]-stops[5][1]) + stops[6][0]-stops[6][1]) + stops[7][0]-stops[7][1])  + stops[8][0]-stops[8][1]\n",
+    "\n",
+    "\n",
+    "\n",
+    "list_passangers = []\n",
+    "\n",
+    "list_passangers.append(a)\n",
+    "list_passangers.append(b)\n",
+    "list_passangers.append(c)\n",
+    "list_passangers.append(d)\n",
+    "list_passangers.append(e)\n",
+    "list_passangers.append(f)\n",
+    "list_passangers.append(g)\n",
+    "list_passangers.append(h)\n",
+    "list_passangers.append(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,16 +115,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The maximum ocupations of the bus is 14 passangers\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The maximum ocupations of the bus is',max(list_passangers),'passangers')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 4. Calculate the average occupation. And the standard deviation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average ocupation is 9.333333333333334\n",
+      "\n",
+      "The standard deviation of the number of passengers in the bus is 3.197221015541813\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_ocupation = sum(list_passangers)/len(list_passangers)\n",
+    "print('The average ocupation is',average_ocupation)\n",
+    "\n",
+    "a = []\n",
+    "for passangers in list_passangers:\n",
+    "    a.append((passangers - average_ocupation)**2)\n",
+    "\n",
+    "std_passangers = (sum(a)*1/len(list_passangers))**(1/2)\n",
+    "\n",
+    "print('\\nThe standard deviation of the number of passengers in the bus is',std_passangers)"
    ]
   },
   {
@@ -117,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
