--- a/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
+++ b/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
@@ -30,10 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "well_height = 125\n",
+    "daily_distance = 30\n",
+    "nightly_distance = 20\n",
+    "snail_position = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,10 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "days = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,10 +65,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while snail_position < well_height:\n",
+    "    days +=1\n",
+    "    snail_position = snail_position +(daily_distance + nightly_distance)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,10 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(days)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,25 +118,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The snail get's out of the well in 3 days\n"
+     ]
+    }
+   ],
+   "source": [
+    "advance_cm = [30,21,33,77,44,45,23,45,12,34,55]\n",
+    "nightly_distance = 20\n",
+    "snail_position = 0\n",
+    "well_height = 125\n",
+    "i=0\n",
+    "while i < len(advance_cm) and snail_position<125 :\n",
+    "    \n",
+    "    snail_position = snail_position +(advance_cm[i]+nightly_distance)\n",
+    "    i +=1\n",
+    "print(\"The snail get's out of the well in\",i,\"days\")\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "#### 2. What is its maximum displacement in one day? And its minimum? Calculate the displacement using only the travel distance of the days used to get out of the well. \n",
     "**Hint**: Remember that displacement means the total distance risen taking into account that the snail slides at night.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the maximum displacement in one day is 144 cm\n",
+      "the minimum displacement in one day is 50 cm\n"
+     ]
+    }
+   ],
+   "source": [
+    "advance_cm = [30,21,33,77,44,45,23,45,12,34,55]\n",
+    "nightly_distance = 20\n",
+    "snail_position = 0\n",
+    "well_height = 125\n",
+    "days_out_well = []\n",
+    "i=0\n",
+    "while i < len(advance_cm) and snail_position<125 :\n",
+    "    \n",
+    "    snail_position = snail_position +(advance_cm[i]+nightly_distance)\n",
+    " \n",
+    "    days_out_well.append(snail_position)\n",
+    "    i +=1\n",
+    "\n",
+    "print('the maximum displacement in one day is',max(days_out_well),'cm')\n",
+    "print('the minimum displacement in one day is',min(days_out_well),'cm')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,10 +193,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(days_out_well)/len(days_out_well))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,10 +217,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The standard deviation of displacement is 38.47943173523573\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "mean = sum(days_out_well)/len(days_out_well)\n",
+    "N_values = len(days_out_well)\n",
+    "values_squared =[]\n",
+    "i=0\n",
+    "while i < len(days_out_well):\n",
+    "   \n",
+    "    values_squared.append((days_out_well[i]-mean)**2)\n",
+    "    i +=1\n",
+    "\n",
+    "std = (sum( values_squared)*1/N_values)**(1/2) #calculates the standard deviation\n",
+    "\n",
+    "print('The standard deviation of displacement is',std) #assuming that the values are representation of the entire population\n"
+   ]
   }
  ],
  "metadata": {
@@ -161,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
