--- a/1.-Python/4.-Robin-Hood/robin-hood.ipynb
+++ b/1.-Python/4.-Robin-Hood/robin-hood.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,10 +55,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The coordinates where an arrow hits another arrow are: {(-3, 2), (4, 5), (5, 7), (2, 2)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "arrow_hit_arrow = set()\n",
+    "\n",
+    "for i in points:\n",
+    "    if points.count(i)>1:\n",
+    "        arrow_hit_arrow.add(i)\n",
+    "\n",
+    "print('The coordinates where an arrow hits another arrow are:',arrow_hit_arrow)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,10 +86,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "There are 10  arrows in Q1.\n",
+      "\n",
+      "There are 6  arrows in Q2.\n",
+      "\n",
+      "There are 2  arrows in Q3.\n",
+      "\n",
+      "There are 2  arrows in Q4.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Transforms the tupples into list type\n",
+    "i = 0\n",
+    "list_points = []\n",
+    "while i < len(points):\n",
+    "    list_points.append(list(points[i]))\n",
+    "    i += 1\n",
+    "\n",
+    "#print('\\n',list_points)\n",
+    "\n",
+    "#Creates a list with all the coordinates on the Q1 \n",
+    "Q1 = []\n",
+    "i= 0\n",
+    "while i < len(list_points):\n",
+    " if list_points[i][0] >0 and list_points[i][1] >0:\n",
+    "     Q1.append(list_points[i])\n",
+    " i += 1\n",
+    "#print('\\nCoordinates of the arrows in Q1:',Q1)\n",
+    "\n",
+    "print('\\nThere are',len(Q1),' arrows in Q1.')\n",
+    "\n",
+    "#Creates a list with all the coordinates on the Q2 \n",
+    "Q2 = []\n",
+    "i= 0\n",
+    "while i < len(list_points):\n",
+    " if list_points[i][0] <0 and list_points[i][1] >0:\n",
+    "     Q2.append(list_points[i])\n",
+    " i += 1\n",
+    "#print('\\nCoordinates of the arrows in Q2:',Q2)\n",
+    "\n",
+    "print('\\nThere are',len(Q2),' arrows in Q2.')\n",
+    "\n",
+    "#Creates a list with all the coordinates on the Q3 \n",
+    "Q3 = []\n",
+    "i= 0\n",
+    "while i < len(list_points):\n",
+    " if list_points[i][0] <0 and list_points[i][1] <0:\n",
+    "     Q3.append(list_points[i])\n",
+    " i += 1\n",
+    "#print('\\nCoordinates of the arrows in Q3:',Q3)\n",
+    "\n",
+    "print('\\nThere are',len(Q3),' arrows in Q3.')\n",
+    "\n",
+    "#Creates a list with all the coordinates on the Q4 \n",
+    "Q4 = []\n",
+    "i= 0\n",
+    "while i < len(list_points):\n",
+    " if list_points[i][0] >0 and list_points[i][1] <0:\n",
+    "     Q4.append(list_points[i])\n",
+    " i += 1\n",
+    "#print('\\nCoordinates of the arrows in Q4:',Q4)\n",
+    "\n",
+    "print('\\nThere are',len(Q4),' arrows in Q4.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,10 +172,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The arrows closest to the center have the distance of 2.0\n",
+      "\n",
+      "The arrows closest to the center have the coordinates of [[0, 2], [0, -2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dist_center = []\n",
+    "coordinates_close_center = []\n",
+    "i= 0\n",
+    "while i < len(list_points):\n",
+    " distance = ( ( (list_points[i][0])**2 )+ ( (list_points[i][1])**2) )**(1/2)\n",
+    " dist_center.append(distance)\n",
+    " if distance == min(dist_center):\n",
+    "     coordinates_close_center.append(list_points[i])\n",
+    " i += 1\n",
+    "\n",
+    "i= 0\n",
+    "min_dist = []\n",
+    "for i in range(len(list_points)) :\n",
+    "    dist = ( ( (list_points[i][0])**2 )+ ( (list_points[i][1])**2) )**(1/2)\n",
+    "    if dist == min(dist_center):\n",
+    "        min_dist.append(list_points[i])\n",
+    "    i += 1\n",
+    " \n",
+    "print('\\nThe arrows closest to the center have the distance of',min(dist_center))\n",
+    "print('\\nThe arrows closest to the center have the coordinates of',min_dist)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,6 +215,32 @@
    "source": [
     "#### 4. If the archery target has a radius of 9, calculate the number of arrows that won't hit the target. \n",
     "**Hint**: Use the function created in step 3. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The number of arrows that won't hit the target are 2 and have the coordinates [[9, 9], [-8, -9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "target_out = []\n",
+    "i= 0\n",
+    "while i < len(list_points):\n",
+    " distance = ( ( (list_points[i][0])**2 )+ ( (list_points[i][1])**2) )**(1/2)\n",
+    " if distance > 9 :\n",
+    "     target_out.append(list_points[i])\n",
+    " i += 1\n",
+    "\n",
+    "print(\"\\nThe number of arrows that won't hit the target are\",len(target_out),\"and have the coordinates\",target_out) "
    ]
   },
   {
@@ -125,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
